fix: update copyright year format in translation files
- Modified copyright text in English, Russian, and Uzbek translation files to include the current year prefix for better accuracy and consistency.

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -52,7 +52,7 @@
       "location": "Location",
       "country": "Uzbekistan"
     },
-    "copyright": "© {{year}} Mirshod Qayimov. All rights reserved.",
+    "copyright": "© 2023-{{year}} Mirshod Qayimov. All rights reserved.",
     "status": "Available for new opportunities",
     "backToTop": "Back to top"
   },
