--- a/frontend/src/locales/ru/translation.json
+++ b/frontend/src/locales/ru/translation.json
@@ -52,7 +52,7 @@
       "location": "Местоположение",
       "country": "Узбекистан"
     },
-    "copyright": "© {{year}} Миршод Каюмов. Все права защищены.",
+    "copyright": "© 2023-{{year}} Миршод Каюмов. Все права защищены.",
     "status": "Доступен для новых возможностей",
     "backToTop": "Наверх"
   },
