--- a/frontend/src/locales/uz/translation.json
+++ b/frontend/src/locales/uz/translation.json
@@ -52,7 +52,7 @@
       "location": "Manzil",
       "country": "O'zbekiston"
     },
-    "copyright": "© {{year}} Mirshod Qayimov. Barcha huquqlar himoyalangan.",
+    "copyright": "© 2023-{{year}} Mirshod Qayimov. Barcha huquqlar himoyalangan.",
     "status": "Yangi imkoniyatlar uchun mavjud",
     "backToTop": "Yuqoriga"
   },
