refactor: update Home component and project data for improved clarity and presentation
- Revamped the terminal display in the Home component to reflect current status, skills, and availability, enhancing user engagement.
- Updated project descriptions and technologies in projects.json to better represent expertise and project scope.
- Revised translations in multiple languages to align with the new project descriptions and subtitles, ensuring consistency across the application.

--- a/frontend/src/locales/ru/translation.json
+++ b/frontend/src/locales/ru/translation.json
@@ -2,7 +2,7 @@
   "hero": {
     "title": "Привет, я <1>Миршод Каюмов</1><br/>Разработчик цифровых решений",
     "badge": "Инженер-программист",
-    "subtitle": "Создание надежных микросервисов, масштабируемых API и интеллектуальных AI решений для современного бизнеса.",
+    "subtitle": "Создание AI-продуктов с нуля до продакшена",
     "typingTexts": [
       "Backend Разработчик & AI Инженер",
       "Специалист по микросервисам и API",
@@ -120,8 +120,8 @@
     "viewAll": "Посмотреть все проекты",
     "project1": {
       "title": "YakLabs Платформа",
-      "description": "Платформа для реального времени сотрудничества с использованием Python, Django, WebSocket и WebRTC.",
-      "tags": ["Python", "Django", "WebSocket", "WebRTC"]
+      "description": "Платформа для реального времени сотрудничества с использованием Python, Django и WebSocket.",
+      "tags": ["Full-Stack Developer", "iOT Backend", "AI/ML"]
     },
     "project2": {
       "title": "Texnomart API",
