--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -2,7 +2,7 @@
   "hero": {
     "title": "Hi, I'm <1>Mirshod Qayimov</1><br/>Building Digital Solutions",
     "badge": "Software Engineer",
-    "subtitle": "Building robust microservices, scalable APIs, and intelligent AI solutions for modern businesses.",
+    "subtitle": "Building AI-powered products from zero to production",
     "typingTexts": [
       "Backend Developer & AI Engineer",
       "Microservices & APIs Specialist",
@@ -120,8 +120,8 @@
     "viewAll": "View All Projects",
     "project1": {
       "title": "YakLabs Platform",
-      "description": "A real-time collaboration platform using Python, Django, WebSocket, and WebRTC.",
-      "tags": ["Python", "Django", "WebSocket", "WebRTC"]
+      "description": "A real-time collaboration platform using Python, Django, and WebSocket.",
+      "tags": ["Full-Stack Developer", "iOT Backend", "AI/ML"]
     },
     "project2": {
       "title": "Texnomart API",
