--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -239,119 +239,7 @@
     "viewAll": "View All Projects",
     "view": "View",
     "noProjects": "No projects found",
-    "noProjectsSubtitle": "No projects available at the moment",
-    "data": {
-      "1": {
-        "title": "Yaklabs IoT Platform",
-        "description": "IoT backend for device provisioning, telemetry ingestion, and real-time analytics. Built core architecture, Flask services, and PyTorch models.",
-        "technologies": [
-          "Flask",
-          "Python",
-          "PyTorch",
-          "Redis",
-          "PostgreSQL",
-          "IoT integrations"
-        ]
-      },
-      "2": {
-        "title": "Taffi",
-        "description": "AI cosmetics platform using a YOLO face-analysis pipeline. Built and deployed the CV model and full FastAPI inference workflow.",
-        "technologies": [
-          "YOLO",
-          "FastAPI",
-          "Python",
-          "Docker",
-          "GPU inference stack"
-        ]
-      },
-      "3": {
-        "title": "Mini CRM",
-        "description": "Lead-routing CRM with operator load balancing and real-time updates. Designed routing logic and built the FastAPI + PostgreSQL backend.",
-        "technologies": [
-          "FastAPI",
-          "Python",
-          "PostgreSQL",
-          "Redis",
-          "REST",
-          "WebSockets"
-        ]
-      },
-      "4": {
-        "title": "AI Assistant Platform",
-        "description": "AI assistant system with authentication, prompt pipeline, and dashboard. Built backend, OpenAI integration, and message routing.",
-        "technologies": [
-          "Python",
-          "OpenAI API",
-          "PostgreSQL",
-          "FastAPI",
-          "Authentication",
-          "Admin dashboard"
-        ]
-      },
-      "5": {
-        "title": "E-Commerce Marketplace",
-        "description": "Multi-vendor marketplace with product management and order workflows. Developed backend architecture and payment integration.",
-        "technologies": [
-          "Django",
-          "Python",
-          "PostgreSQL",
-          "Redis",
-          "Payment APIs"
-        ]
-      },
-      "6": {
-        "title": "Smart School Management System",
-        "description": "API-first school management platform with multi-role access and admin tools. Built core Django modules and REST endpoints.",
-        "technologies": [
-          "Django",
-          "Python",
-          "PostgreSQL",
-          "REST API",
-          "RBAC",
-          "API documentation"
-        ]
-      }
-    },
-    "project1": {
-      "title": "YakLabs Platform",
-      "description": "A real-time collaboration platform using Python, Django, and WebSocket.",
-      "tags": ["Full-Stack Developer", "iOT Backend", "AI/ML"]
-    },
-    "project2": {
-      "title": "Texnomart API",
-      "description": "RESTful API for e-commerce using Node.js and MongoDB.",
-      "tags": ["Node.js", "MongoDB", "REST API"]
-    },
-    "project3": {
-      "title": "Online Shopping",
-      "description": "Full-stack online shopping web app.",
-      "tags": ["React", "Node.js", "Express"]
-    },
-    "project4": {
-      "title": "Online Course",
-      "description": "Platform for online courses and learning.",
-      "tags": ["React", "Django", "PostgreSQL"]
-    },
-    "project5": {
-      "title": "Hospital Management",
-      "description": "System for managing hospital operations.",
-      "tags": ["Python", "Flask", "MySQL"]
-    },
-    "project6": {
-      "title": "GPT-Neo",
-      "description": "Custom AI language model implementation.",
-      "tags": ["Python", "AI", "NLP"]
-    },
-    "project7": {
-      "title": "Gemina App",
-      "description": "Multilingual translation and communication app.",
-      "tags": ["React Native", "Translation", "Mobile"]
-    },
-    "project8": {
-      "title": "Medius Analytics",
-      "description": "Analytics dashboard for business intelligence.",
-      "tags": ["React", "D3.js", "Analytics"]
-    }
+    "noProjectsSubtitle": "No projects available at the moment"
   },
   "achievements": {
     "title": "GitHub Achievements",
