refactor: update Header and Projects components for improved functionality and UI
- Removed the sidebar collapse state from the Header component for a cleaner layout.
- Enhanced the Projects component with mouse position tracking and added GitHub links for projects.
- Updated project data in projects.json to include GitHub URLs and revised project descriptions.
- Added new translations for "View Website" and "View in GitHub" in multiple languages.

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -238,6 +238,8 @@
     "viewProject": "View Project",
     "viewAll": "View All Projects",
     "view": "View",
+    "viewWebsite": "View Website",
+    "viewInGithub": "View in GitHub",
     "noProjects": "No projects found",
     "noProjectsSubtitle": "No projects available at the moment"
   },
